--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>  Your Name </h1>
-            <h2> Email Address </h2>
+            <h1>  Tilak D </h1>
+            <h2> tilakdinakar16@gmail.com </h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
